# pympi

./: .gitignore  .gitmodules  README.md  pyproject.toml
pympi/: MPI.py  __main__.py  proto.py  rc.py  server.py  util.py  utils.py
pympi/test/: api.py  exc.py  iops.py
test/: api.py  exc.py  iops.py
typings/: intbitset.pyi
