[project]
name = "pympi"
version = "1.1.0"
description = "Simple Python-based MPI implementation"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Miguel Ãngel Prosper", email = "mprosper@uji.es" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["MPI", "Parallel", "Python"]
urls = { Homepage = "https://github.com/hpca-uji/pympi", Repository = "https://github.com/hpca-uji/pympi.git"}

requires-python = ">=3.13"
dependencies = [
    "bidict>=0.23.1",
    "intbitset>=4.0.0",
    "net-queue>=2.0.0"
]

[project.optional-dependencies]
test = [
    "numpy>=1.19.4"
]

[build-system]
requires = [
    "setuptools>=68.2.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "pympi",
    "pympi.*"
]