[project]
name = "pympi"
version = "1.4.7"
description = "Python-based MPI implementation for experimentation, extensibility and high-performance communications"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Miguel Ángel Prosper", email = "mprosper@uji.es" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["MPI", "Parallel", "Python"]
urls = { Homepage = "https://github.com/hpca-uji/pympi", Repository = "https://github.com/hpca-uji/pympi.git" }

requires-python = "~=3.13"
dependencies = [
    "bidict~=0.23",
    "intbitset~=4.1",
    "net-queue~=2.5"
]

[project.optional-dependencies]
test = [
    "numpy~=2.4"
]

[project.scripts]
pympi-run = "pympi.__main__:_start"
pympi-server = "pympi.server:_start"

[build-system]
requires = [
    "setuptools~=82.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "pympi",
    "pympi.*"
]